frontend/admin/index.css
:root {
  --primary-colour: #fffdfa;
  --secondary-colour: #154724;
  --accent-colour: #9fe644;
  --gray: #a3a3a3;
}

* {
  padding: 0;
  margin: 0;
  outline: none;
  border: none;
  box-sizing: border-box;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  min-height: 100dvh;
}

.wrapper {
  width: 100%;
}

header {
  display: flex;
  padding: 8px 16px;
  background-color: var(--secondary-colour);
}
.user {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: auto;
}
.user img {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}
.user span {
  display: none;
}


.bodyContent {
  display: flex;
  flex-direction: row wrap;
}

main {
  display: flex;
  flex-flow: row wrap;
  padding: 8px;
  gap: 8px;
}
.card {
  position: relative;
  border: 1px solid var(--accent-colour);
  width: 165px;
  padding: 12px;
  background: rgba(255, 255, 255, 0.5);
  border-radius: 4px;
  transition: left 0.5s ease-out;
}

.corner {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: absolute;
  top: 8px;
  left: 0;
  padding: 4px 20px 4px 8px;
  background-color: rgba(159, 230, 68, 0.6);
  backdrop-filter: blur(10px);
  clip-path: polygon(100% 0, 95% 50%, 100% 100%, 0 100%, 0 0);
  font-weight: bold;
}

.card .img{
  display: inline-block;
  width: 100%;
  aspect-ratio: 1;
  background-size: 200% 100%;
  background-image: linear-gradient(to right, var(--secondary-colour), var(--primary-colour), var(--secondary-colour));
 animation: loading 2s ease-in-out infinite alternate;
}

aside {
  display: flex;
  justify-content: center;
  align-items: start;
  max-width: 350px;
  padding: 12px;
}
aside form {
  display: flex;
  flex-direction: column;
  padding: 12px;
}
.imageInput {
  position: relative;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid var(--gray);
  border-radius: 8px;
  height: 200px;
}
.imageInput span {
  font-weight: 700;
  color: var(--accent-colour);
}
.filePicker {
  display: none;
}
.uploadedImage {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: transparent;
}
.imgButton {
  padding: 8px 16px;
  margin-left: auto;
  font-weight: 900;
}
.cardTitles {
  display: flex;
  padding: 4px;
  border: 2px solid var(--gray);
  border-radius: 8px;
}
.cardTitles input {
  outline: var(--accent-colour);
}
.cardTitles input:first-child {
  width: 40%;
  margin-right: 4px;
  border-right: 2px solid var(--gray);
}
.description {
  padding: 4px;
  border: 2px solid var(--gray);
  border-radius: 8px;
}
button.submit {
  padding: 8px 16px;
  margin-right: auto;
  border-radius: 4px;
  font-weight: 900;
}

@keyframes loading {
  0% {
    background-position: 100% 0;
  }
  100% {
    background-position: -100% 0;
  }
}

